Corrected the Trending Controller SQL queries for correct answer